--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,44 @@
 <html>
-
+{% load bootstrap3 %}
 <head>
     <title>Wypożyczalnia filmów</title>
+    {% load static %}
+    {% load socialaccount %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+
+    <link rel="stylesheet" type="text/css" href="{% static 'shelf/custom.css' %}"/>
 </head>
 
 <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{% url 'main-page' %}">Karol Chmielewski</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a  href ="{% url 'shelf:film-list' %}">Filmy</a></li>
+                    <li><a href="{% url 'shelf:director-list' %}">Reżyserzy</a></li>
+                    <li><a href="{% url 'rent:rent-film' %}">Wypożycz</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/admin">Panel admina</a></li>
+                    {% if user.is_authenticated %}<li><a  href ="{% url 'account_logout' %}">Wyloguj się</a></li>
+                    {% else %}<li><a href="{% url 'account_login' %}">Zaloguj się</a></li>
+                    <li><a href="{% provider_login_url 'facebook' method='js_sdk' %}">Zaloguj się za pomocą facebooka</a></li>
+                    <li><a href="{% url 'account_signup' %}">Załóż konto</a></li>{% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="jumbotron">
+        <div class="container text-center">
+            {% block content %}
 
-{% block 'content' %}
-
-{% endblock %}
+            {% endblock %}
+        </div>
+    </div>
 
 </body>
 
